tea: update twinnings and add numeric score
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -20,78 +20,100 @@
 <body>
 <h1>Sami's tea tasting notes</h1>
 
+<h2>Company -
+<a href="https://www.example.com/">Product Name</a>
+(5/5 score)</h2>
+<p>ISO-8601 date when I got the tea.  Tea type.  Textual description.</p>
+
+<hr>
 <!--
 <h2>company -
-<a href="link">name</a></h2>
-<p>date.  type.  <b></b></p>
+<a href="link">name</a>
+(n)</h2>
+<p>date.  type.  text</p>
 -->
 
 <h2>Twinings -
-<a href="https://www.twinings.co.uk/tea/loose-tea/finest-gunpowder-green">Gunpowder Green</a></h2>
-<p>2020-11-23. Green Tea.  <b></b></p>
+<a href="https://www.twinings.co.uk/tea/loose-tea/finest-gunpowder-green">Gunpowder Green</a>
+()</h2>
+<p>2020-11-23. Green Tea.</p>
 
 <h2>Twinings -
-<a href="https://www.twinings.co.uk/tea/loose-tea/finest-kenyan">High Grown Kenyan</a></h2>
-<p>2020-11-23. Black Tea.  <b></b></p>
+<a href="https://www.twinings.co.uk/tea/loose-tea/finest-kenyan">High Grown Kenyan</a>
+(3)</h2>
+<p>2020-11-23.  Black Tea.  A tea without faults or anything special.  Very
+similar with the Strand Strong.</p>
 
 <h2>Twinings -
-<a href="https://www.twinings.co.uk/gifts/discovery-collection/discovery-collection-pure-sencha-green-loose-tea">Sencha Green</a></h2>
-<p>2020-11-23. Green tea.  <b></b></p>
+<a href="https://www.twinings.co.uk/gifts/discovery-collection/discovery-collection-pure-sencha-green-loose-tea">Sencha Green</a>
+(3)</h2>
+<p>2020-11-23.  Green tea.  Good one.  The first impression is this is quite
+light in aroma.  An experiment with greater tea to water proportion is
+needed.</p>
 
 <h2>Twinings -
-<a href="https://www.twinings.co.uk/tea/loose-tea/signature-earl-grey">Signature Earl Grey</a></h2>
-<p>2020-11-23. Black tea.  <b></b></p>
+<a href="https://www.twinings.co.uk/tea/loose-tea/signature-earl-grey">Signature Earl Grey</a>
+()</h2>
+<p>2020-11-23. Black tea.</p>
 
 <h2>Twinings -
-<a href="https://www.twinings.co.uk/tea/loose-tea/discovery-collection-forest-fruits-loose">Forest Fruits Black</a></h2>
+<a href="https://www.twinings.co.uk/tea/loose-tea/discovery-collection-forest-fruits-loose">Forest Fruits Black</a>
+(5)</h2>
 <p>2020-10-31.  Black tea.  Really nice smell.  Taste gives a little hint of
-berries.  I like this one.  <b>5</b></p>
+berries.  I like this one.</p>
 
 <h2>Twinings -
-<a href="https://www.twinings.co.uk/tea/loose-black-tea/lapsang-souchong">Lapsang Souchong</a></h2>
+<a href="https://www.twinings.co.uk/tea/loose-black-tea/lapsang-souchong">Lapsang Souchong</a>
+(4)</h2>
 <p>2020-10-31.  Smoky black tea.  Great smell.  Fairly straightforward smoke
-aroma.  To be honest; I wouldn't mind this being more smoky.  <b>4</b></p>
+aroma.  To be honest; I wouldn't mind this being more smoky.</p>
 
 <h2>Twinings -
-<a href="https://www.twinings.co.uk/tea/loose-black-tea/london-strand-strong-breakfast">London Strand Strong Breakfast</a></h2>
+<a href="https://www.twinings.co.uk/tea/loose-black-tea/london-strand-strong-breakfast">London Strand Strong Breakfast</a>
+(3)</h2>
 <p>2020-10-31.  Black tea.  Good tea without faults.  Taste is better when
 not boiling hot.  Similar to Darlington I had earlier, but not as
-expensive.  <b>3</b></p>
+expensive.</p>
 
 <h2>Twinings -
-<a href="https://www.twinings.co.uk/tea/loose-black-tea/nutty-chocolate-assam-loose-tea">Nutty Chocolate Assam</a></h2>
-<p>2020-10-31.  Blak tea.  Smell has nice hazelnut aroma, but I don't like
+<a href="https://www.twinings.co.uk/tea/loose-black-tea/nutty-chocolate-assam-loose-tea">Nutty Chocolate Assam</a>
+(2)</h2>
+<p>2020-10-31.  Black tea.  Smell has nice hazelnut aroma, but I don't like
 test of it.  In wine terms this tea is too dry.  I guess this one would be
-better with milk, but that is not how I drink my tea.  <b>2</b></p>
+better with milk, but that is not how I drink my tea.</p>
 
 <h2>Mariage Frères -
-<a href="https://www.mariagefreres.com/UK/2-robe-rouge-supreme-blue-tea-china-T2315.html">Robe Rouge Suprême</a></h2>
+<a href="https://www.mariagefreres.com/UK/2-robe-rouge-supreme-blue-tea-china-T2315.html">Robe Rouge Suprême</a>
+(4)</h2>
 <p>2020-10-10.  Blue tea.  Taste give clear seaweed aroma.  Good one, but
 this does require question is this worth the price?  Maybe once, but I doubt
-twice.  <b>4</b></p>
+twice.</p>
 
 <h2>Mariage Frères -
-<a href="https://www.mariagefreres.com/UK/2-darlington-T737.html">Darlington</a></h2>
+<a href="https://www.mariagefreres.com/UK/2-darlington-T737.html">Darlington</a>
+(3)</h2>
 <p>2020-10-10.  Black tea.  Really good smell.  Not super interesting, but
-nothing to complain.  <b>3</b></p>
+nothing to complain.</p>
 
 <h2>The Tea House -
-<a href="https://theteahouseltd.com/rooibos/rooibos-cinnamon-vanilla/p-001329">Rooibos Cinnamon And Vanilla</a></h2>
+<a href="https://theteahouseltd.com/rooibos/rooibos-cinnamon-vanilla/p-001329">Rooibos Cinnamon And Vanilla</a>
+(1)</h2>
 <p>2020-09-26.  Rooibos.  Basically an attempt to try rooibos first time
-long time.  Not very interesting, but better than supermarket teabags.
-<b>1</b></p>
+long time.  Not very interesting, but better than supermarket teabags.</p>
 
 <h2>TWG Tea -
-<a href="https://twgtea.com/teas/loose-leaf/jade-dragon-tea-1">Jade Dragon</a></h2>
+<a href="https://twgtea.com/teas/loose-leaf/jade-dragon-tea-1">Jade Dragon</a>
+(5)</h2>
 <p>2020-09-05.  Green tea.  I really enjoyed this one.  Done again
 without scale, but even with just eyeballing cups turned out great.
-Strong recommendation.  <b>5</b></p>
+Strong recommendation.</p>
 
 <h2>Mariage Frères -
-<a href="https://www.mariagefreres.com/UK/2-lung-ching-green-tea-china-T221.html">Lung Ching</a></h2>
+<a href="https://www.mariagefreres.com/UK/2-lung-ching-green-tea-china-T221.html">Lung Ching</a>
+(3)</h2>
 <p>2020-08-22.  Green tea.  Nice grass aromas.  I messed up when making.  I
 did not have scale at the time, so half of the cups resulted too weak.
-Good one.  <b>3</b></p>
+Good one.</p>
 
 </body>
 </html>
