remove home adddress
I am moving to a new location, this time it is not for world to know

Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <span itemprop=name>Cloudflare Ltd</span><br>
 Sami Kerola<br>
 <span itemprop=address itemscope itemtype=http://schema.org/PostalAddress>
-<span itemprop=streetAddress>The Riverside Building, County Hall</span>, 6th floor<br>
+<span itemprop=streetAddress>The Riverside Building, <td class=d><a href=https://what3words.com/moves.surely.life itemprop=url>County Hall</a></span>, 6th floor<br>
 <span itemprop=addressLocality>London</span><br>
 <span itemprop=postalCode>SE1 7PB</span><br>
 <span itemprop=addressCountry>United Kingdom</span></span></span></p>
@@ -36,14 +36,6 @@ Sami Kerola<br>
 </table>
 </div>
 <h4>home</h4>
-<p class=j>address<br></p>
-<p class=a><span itemprop=givenName>Sami</span> <span itemprop=familyName>Kerola</span><br>
-<span itemprop=homeLocation itemscope itemtype=http://schema.org/PostalAddress>
-<span itemprop=alternateName>Flat 4, Clarion House</span><br>
-<span itemprop=streetAddress>70 Park Hill</span><br>
-<span itemprop=addresslocality>London</span><br>
-<span itemprop=postalCode>SW4 9PB</span><br>
-<span itemprop=addressCountry>United Kingdom</span></span></p>
 <div class=j>
 <table>
 <tr>
