tea: update Twinings Gunpowder and Earl Grey
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -35,8 +35,10 @@
 
 <h2>Twinings -
 <a href="https://www.twinings.co.uk/tea/loose-tea/finest-gunpowder-green">Gunpowder Green</a>
-()</h2>
-<p>2020-11-23. Green Tea.</p>
+(4)</h2>
+<p>2020-11-23.  Green Tea.  Not special, but sufficiently strong green tea.
+Second brew is possible with this product, although by second round the tea
+clearly has lost some aroma.</p>
 
 <h2>Twinings -
 <a href="https://www.twinings.co.uk/tea/loose-tea/finest-kenyan">High Grown Kenyan</a>
@@ -53,8 +55,9 @@ needed.</p>
 
 <h2>Twinings -
 <a href="https://www.twinings.co.uk/tea/loose-tea/signature-earl-grey">Signature Earl Grey</a>
-()</h2>
-<p>2020-11-23. Black tea.</p>
+(3)</h2>
+<p>2020-11-23. Black tea.  Nothing wrong with this one.  I am coming to
+conclusion Earl Gray is not really that interesting tea.</p>
 
 <h2>Twinings -
 <a href="https://www.twinings.co.uk/tea/loose-tea/discovery-collection-forest-fruits-loose">Forest Fruits Black</a>
