tea: Kericho Gold, Ketapa, Out of Africa
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -33,6 +33,33 @@
 <p>date.  type.  text</p>
 -->
 
+<h2>Kericho Gold -
+<a href="https://shop.kerichogold.com/product/loose-tea-500g-jar/">KG Loose Tea</a>
+(3)</h2>
+<p>2021-01-31.  Black Tea.  Quite good black tea.  Maybe not the world most
+sophisticated aromas, but definitely does the job.  Excellent value for
+money ratio.</p>
+
+<h2>Ketapa -
+<a href="https://ketepa.com/product-category/tea/jani-green-tea/">Jani</a>
+(2)</h2>
+<p>2021-01-31.  Green Tea.  Quarter kilo package of green tea that is
+crushed to bits being almost powder.  I got this as a loose tea, and because
+the powerder form it took few tries to get cooking go right.  My regular tea
+is 12 grams of tea to my 0.75 liter tea pot, but when the tea has so much
+more surface area it will be undrinkably strong with same measure.  Half
+measure seems to be enough.  But is this a good tea?  Not marvelous, but not
+bad either.  Because the leafs are in totally destroyed it might be that
+Ketapa has used some second grade stuff to make this tea, and blend it with
+some good stuff to keep product drinkable.</p>
+
+<h2>Out of Africa -
+Premium Blend
+(2)</h2>
+<p>2021-01-31.  Black Tea.  No thrills black tea.  Quite strong and
+straightforward taste.  Perhaps a bit dull tea to go through, and I had a
+kilo of this.</p>
+
 <h2>Twinings -
 <a href="https://www.twinings.co.uk/tea/loose-tea/finest-gunpowder-green">Gunpowder Green</a>
 (4)</h2>
