--- a/tea.html
+++ b/tea.html
@@ -33,6 +33,27 @@
 <p>date.  type.  text</p>
 -->
 
+<h2>Ketepa -
+<a href="https://ketepa.com/product/purple-tea-copy-100-gm/">Purple Tea</a>
+(1)</h2>
+
+<p>2021-01-31.  Purple Tea.  I don't know what is wrong.  The tea will not
+turn any shade of purple no matter am I mixing it with lime or lemon.  Best
+I managed to get is a shade of pink.  That said citrus does improve the
+test, but not enormously.  Taste without citrus gives some soil aromas, but
+is overall watery while still managing to have nasty aromas.</p>
+
+
+<h2>Marikiti Market spice sale booth in Mombasa -
+<a href="https://twenzetu.com/local/marikiti-market/">Mango Tea</a>
+(5)</h2>
+<p>2021-04-08.  Spiced Black Tea.  Smell of this tea is great, you can
+absolutely get sensation of mangos.  But it doesn't stop to smell, there is
+also aroma of although it is not quite as strong.  My imagination might be
+playing tricks, but I get sensation like this tea would be sweet while it
+cannot possibly be true.  It must be the mango aroma that is fooling taste
+buds.</p>
+
 <h2>Kericho Gold -
 <a href="https://shop.kerichogold.com/product/loose-tea-500g-jar/">KG Loose Tea</a>
 (3)</h2>
@@ -40,7 +61,7 @@
 sophisticated aromas, but definitely does the job.  Excellent value for
 money ratio.</p>
 
-<h2>Ketapa -
+<h2>Ketepa -
 <a href="https://ketepa.com/product-category/tea/jani-green-tea/">Jani</a>
 (2)</h2>
 <p>2021-01-31.  Green Tea.  Quarter kilo package of green tea that is
@@ -50,7 +71,7 @@ is 12 grams of tea to my 0.75 liter tea pot, but when the tea has so much
 more surface area it will be undrinkably strong with same measure.  Half
 measure seems to be enough.  But is this a good tea?  Not marvelous, but not
 bad either.  Because the leafs are in totally destroyed it might be that
-Ketapa has used some second grade stuff to make this tea, and blend it with
+Ketepa has used some second grade stuff to make this tea, and blend it with
 some good stuff to keep product drinkable.</p>
 
 <h2>Out of Africa -
