--- a/tea.html
+++ b/tea.html
@@ -33,16 +33,21 @@
 <p>date.  type.  text</p>
 -->
 
+<h2>Melvins -
+<a href="http://dukkapu.com/melvins-tangawizi-chai-ginger-tea-250g">Tangawizi Tea</a>
+(4)</h2>
+<p>2021-01-31.  Ginger spiced black tea.  This is a nice prouduct.  The tea
+is not very strong, being a bit generous when brewing is good idea.
+Resulting drink is clearly a tea with easily recognizable ginger aroma.</p>
+
 <h2>Ketepa -
 <a href="https://ketepa.com/product/purple-tea-copy-100-gm/">Purple Tea</a>
 (1)</h2>
-
 <p>2021-01-31.  Purple Tea.  I don't know what is wrong.  The tea will not
 turn any shade of purple no matter am I mixing it with lime or lemon.  Best
 I managed to get is a shade of pink.  That said citrus does improve the
 test, but not enormously.  Taste without citrus gives some soil aromas, but
 is overall watery while still managing to have nasty aromas.</p>
-
 
 <h2>Marikiti Market spice sale booth in Mombasa -
 <a href="https://twenzetu.com/local/marikiti-market/">Mango Tea</a>
