add Thé Sur Le Nil to tea list
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -33,6 +33,14 @@
 <p>date.  type.  text</p>
 -->
 
+<h2>Mariage Frères -
+<a href="https://www.mariagefreres.com/UK/2-the-sur-le-nil-T955.html">Thé Sur Le Nil</a>
+(4)</h2>
+<p>2021-07-10.  Green tea.  Stunningly great smell, but pretty ordinary
+green tea taste.  I don't think I will buy this again.  Not bad, but there
+are so many other teas in same price range that getting know with them is
+more useful than going back to fairly ordinary tea.</p>
+
 <h2>Melvins -
 <a href="http://dukkapu.com/melvins-tangawizi-chai-ginger-tea-250g">Tangawizi Tea</a>
 (4)</h2>
