tea: add TWG silver moon and Aberdare leaf tea
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -33,6 +33,28 @@
 <p>date.  type.  text</p>
 -->
 
+<h2>TWG Tea -
+<a href="https://twgtea.com/teas/packaged-loose-leaf/silver-moon-tea">Silver Moon</a>
+(2)</h2>
+<p>2021-08-13.  Green tea.  Okay quality packed to super expensive metal
+pipe.  Since I really enjoyed Jade Dragon I thought giving another try to
+TWG, but this time experience was let-down.  There is nothing exactly wrong
+with the tea, but with as ridiculously high price as this product has one
+would expect a bit more than just an ok green tea.</p>
+
+<h2>Aberdare -
+<a href="https://epepea.com/supermarket/product/aberdare-leaf-tea-500g">Leaf Tea</a>
+(2)</h2>
+<p>2021-01-31.  Black tea.  Taste is no thrills ordinary black tea, exactly
+what one will expect and want for breakfast.  For some reason the maker had
+decided leafs need to be ground to quite fine powder, that will cause
+strainer not to be effective.  This tea requires paper filtering to make
+perfect cup.  Secondly the really fine grind means you don't need as many
+grams of this tea in strainer than some other tea.  I was happy with 8 grams
+per 1 litter, that is about 2 grams less than with leaves that are unbroken.
+Overdozing will make really strong and quite bitter tea.</p>
+
+
 <h2>Mariage Frères -
 <a href="https://www.mariagefreres.com/UK/2-the-sur-le-nil-T955.html">Thé Sur Le Nil</a>
 (4)</h2>
