tea: Whittard, Fauchon, Tea House, Sainsbury's, and Ketapa
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -33,6 +33,59 @@
 <p>date.  type.  text</p>
 -->
 
+<h2>Whittard -
+<a href="https://www.whittard.co.uk/gifts/gift-collections/tea-discoveries/tea-discoveries-mango-bergamot-tea-caddy-347898.html">Mango &amp; Bergamot</a>
+(3)</h2>
+<p>2021-12-24.  Green tea with flavoring.  This is clearly an evening tea.
+Smell is pretty good, and flavours are nice but not very strong.  Taste is
+definitely good, but I end up hoping there would be more of it.</p>
+
+<h2>Fauchon -
+<a href="https://www.fauchon.com/en/the-un-soir-de-noel-1019415/">Thé noir parfumé</a>
+(2)</h2>
+<p>2021-12-20.  Scented black tea.  Really good packaging, maybe I should
+keep the container for later use.  Absolutely great smelling tea, and that
+is where good review ends.  No matter how much I have put this tea into brew
+there is practically no flavor.  That is a fail in the primary reason why to
+drink tea in first place.</p>
+
+<h2>The Tea House -
+<a href="https://www.theteahouseltd.com/herbal/calming-tea/p-000424">Calming Tea</a>
+(4)</h2>
+<p>2021-12-11.  Herbal.  Previous Tea House evening tea was excellent and
+since I happen to be near the shop I went in to get more something similar.
+This is equally nice, slightly sweet and absolutely delightful tea.  The
+only problem I have is that I would like the bag to be a little bit bigger.
+Reason why this goes fast is that you need about 1.5 times the tea vs water
+when compared to most black tea.  First batch I made did not have enough
+herbal mix, and the liquid was disappointingly watery.  But with larger dose
+this is great, with the problem of it's all going to end very fast.</p>
+
+<h2>Sainsbury's -
+<a href="https://www.sainsburys.co.uk/gol-ui/product/all-tea-/sainsburys-fairly-traded-red-label-tea-bags-x40-125g">Fairly Traded Red Label Tea Bags x40</a>
+(3)</h2>
+<p>2021-11-20.  Black tea.  Sometimes whole pot of tea is too much, so I
+though I will get some tea bags from near by super market to make just a cup
+at a time.  As expected not over the moon great, but good enough and works
+in the purpose I had in mind.</p>
+
+<h2>Ketepa -
+<a href="https://ketepa.com/product/fahari-ya-kenya-soft-pack-50g/">Fahari Ya Kenya</a>
+(2)</h2>
+<p>2021-06-20.  Black tea.  Taste of this tea has nothing wrong, but why the
+leaves were crushed to so fine powder?  If you get this tea either use paper
+filters when making, or be ready to eat tea.</p>
+
+
+<h2>The Tea House -
+<a href="https://www.theteahouseltd.com/herbal/lemongrass-strawberry-infusion-tea/p-001005">Lemongrass and Strawberry</a>
+(4)</h2>
+<p>2021-09-18.  Fruit tea.  I got this to be an evening tea, with idea less
+caffeine few hours before going to bed is good idea.  The taste of this tea
+is a little bit sweet and clearly herbal.  While not mindblowing I quite
+like this one, and more importantly I can have cup of something even quite
+late.</p>
+
 <h2>TWG Tea -
 <a href="https://twgtea.com/teas/packaged-loose-leaf/silver-moon-tea">Silver Moon</a>
 (2)</h2>
