add content security policy
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <link rel=canonical href=https://www.iki.fi/kerolasa>
 <meta content="width=device-width,minimum-scale=1,initial-scale=1" name=viewport>
 <meta content=en name=language>
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'">
 <meta content="index, follow" name=robots>
 <title>Sami Kerola</title>
 </head>
