--- a/tea.html
+++ b/tea.html
@@ -33,6 +33,37 @@
 <p>date.  type.  text</p>
 -->
 
+<h2>Java - <a
+href="https://www.carrefour.ke/mafken/en/root-maf-category//beverages/tea/loose-leaf-tea-bags/black-loose/java-gold-label-tea-loose-350g/p/81519">Java House Gold Label Loose Tea</a>
+(3)</h2>
+<p>2022-08-13.  Black tea.  Good product without any real issues.  Only
+problem I really had with this was that I started drinking the tea after the
+Doğuş (see next entry) and I felt a bit disappointed although there is
+nothing wrong with an average product.  I think I should give this one a
+retry after some time.  If I do, and change my mind, this entry will be
+updated.</p>
+
+<h2>Doğuş -
+<a href="https://www.trendyol.com/dogus/siyah-filiz-cay-1000-gr-p-2947120">Siyah Filiz Çay 1000 gr</a>
+(5)</h2>
+<p>2022-04-30.  Black tea.  Excellent buy.  I had this tea every morning for
+months without any concerns getting tired of the taste, or anything like
+that.  This might not be absolutely strongest tea ever, and that is a good
+thing.  One can taste all sorts of floral aromas when brewing just quickly.
+If you leave the tea for ten minutes you will get the punch you need at
+early hours.  If I find this product again I will get another kilo without
+thinking twice.</p>
+
+
+<h2>Edinburgh Tea and Coffee Company -
+<a href="https://www.gretnagreen.com/edinburgh-tea-and-coffee-company-whisky-loose-tea-tin-p19491">Whisky Loose Tea Tin</a>
+(4)</h2>
+<p>2022-03-05.  Flavored black tea.  This was a nice tea.  Package is a bit
+small, so I have drank the tea very sparingly.  Price is not great, but as I
+got this as a gift I can tolerate that.  Would I buy this again if I would
+see the product on near by shop?  I think I would, but not very often.</p>
+
+
 <h2>Whittard -
 <a href="https://www.whittard.co.uk/gifts/gift-collections/tea-discoveries/tea-discoveries-mango-bergamot-tea-caddy-347898.html">Mango &amp; Bergamot</a>
 (3)</h2>
