Edinburgh Tea and Coffee Company: Thistle Loose Tea Tin
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -33,6 +33,18 @@
 <p>date.  type.  text</p>
 -->
 
+<h2>Edinburgh Tea and Coffee Company -
+<a href="https://www.gretnagreen.com/edinburgh-tea-and-coffee-company-thistle-loose-tea-tin-p20597">Thistle Loose Tea Tin</a>
+(2)</h2>
+<p>2022-03-05.  Black tea with thistle.  I did not like this.  Something
+taste was not for me, but I guess someone could think this is great.
+Another annoying thing was that the thistle bits made a mess in my tea pot,
+everytime I brewed this stuff.  Ultimately I started mixing the thistle tea
+with additional black tea, and that mix was more what I wanted. Fair to
+say that is unlikely what the producer of this tea thought ought to be
+done.</p>
+
+
 <h2>Java - <a
 href="https://www.carrefour.ke/mafken/en/root-maf-category//beverages/tea/loose-leaf-tea-bags/black-loose/java-gold-label-tea-loose-350g/p/81519">Java House Gold Label Loose Tea</a>
 (3)</h2>
