move to kerolasa.iki.fi
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/404.html
+++ b/404.html
@@ -28,6 +28,6 @@
 <p>The server has not found anything matching the Request-URI. No
 indication is given of whether the condition is temporary or
 permanent.</p>
-<p>Back to <a href="http://www.iki.fi/kerolasa/">main page</a>.</p>
+<p>Back to <a href="http://kerolasa.iki.fi/">main page</a>.</p>
 </body>
 </html>
