--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <style>A{background:0 0;text-decoration:none}BODY{font-size:16px}DIV.j{float:none;font-size:medium;margin-left:20px}P.a{float:none;font-size:medium;margin-left:45px}P.b A.a{background-position:0 -116px}P.b A.b{background-position:0 0}P.b A.l{background-position:0 -35px}P.b A.o{background-position:0 -60px}P.b A.r{background-position:0 -85px}P.b A{height:31px;padding-left:88px;display:inline-block;background:url(sprite.png)}P.j{float:none;font-size:medium;margin-left:20px}P.w{float:none;font-size:medium;font-weight:700}TABLE{float:none;font-size:medium}TD.d{text-indent:5px}</style>
 <meta content="text/html; charset=utf-8" http-equiv=Content-Type>
 <link href=kerolasa.png rel=icon type=image/png>
-<link rel=canonical href=https://www.iki.fi/kerolasa>
+<link rel=canonical href=https://kerolasa.iki.fi>
 <meta content="width=device-width,minimum-scale=1,initial-scale=1" name=viewport>
 <meta content=en name=language>
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
@@ -53,16 +53,15 @@ Sami Kerola<br>
 </tr>
 <tr>
 <td>web page</td>
-<td class=d><a href=https://www.iki.fi/kerolasa/ itemprop=url>https://www.iki.fi/kerolasa/</a></td>
+<td class=d><a href=https://kerolasa.iki.fi/ itemprop=url>https://kerolasa.iki.fi/</a></td>
 </tr>
 </table>
 </div>
 <meta itemprop=birthDate content=1977-04-28 />
 <meta itemprop=gender content=male />
-<meta itemprop=image content="https://www.iki.fi/kerolasa/me_london.jpg"/>
+<meta itemprop=image content="https://kerolasa.iki.fi/me_london.jpg"/>
 <meta itemprop=sameas content="https://en.gravatar.com/kerolasa"/>
 <meta itemprop=sameas content="https://github.com/kerolasa/"/>
-<meta itemprop=sameas content="https://keybase.io/kerolasa"/>
 <meta itemprop=sameas content="https://savannah.gnu.org/users/kerolasa"/>
 <meta itemprop=sameas content="https://sourceforge.net/u/kerolasa/profile/"/>
 <meta itemprop=sameas content="https://stackoverflow.com/users/796585/sami-kerola"/>
