--- a/second.html
+++ b/second.html
@@ -30,7 +30,7 @@
 <body>
   <h3>Useful stuff mostly for me or my friends.</h3>
 
-  <p><a href="http://www.iki.fi/kerolasa/">My contact information</a><br /></p>
+  <p><a href="/">My contact information</a><br /></p>
 
   <p><a href="thaimaa.html">Thaimaan lomamatka</a><br />
   <a href="matka2003.html">Autoloma it&auml;euroopassa</a><br />
