tea: sainsbury's gold
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/tea.html
+++ b/tea.html
@@ -33,6 +33,13 @@
 <p>date.  type.  text</p>
 -->
 
+<h2>Sainsbury's -
+<a href="https://www.sainsburys.co.uk/gol-ui/product/everyday-tea/sainsburys-gold-label-loose-tea-250g">Fairly Traded Gold Label Loose Leaf Tea 250g</a>
+(2)</h2>
+<p>2022-11-12.  Black tea.  Very standard black tea, without anything
+interesting going on in taste.  And that is the problem.  While ok
+this was definitely quite boring tea.</p>
+
 <h2>Edinburgh Tea and Coffee Company -
 <a href="https://www.gretnagreen.com/edinburgh-tea-and-coffee-company-thistle-loose-tea-tin-p20597">Thistle Loose Tea Tin</a>
 (2)</h2>
