travel: add gym clothes and visa print out
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/travelchecklist.html
+++ b/travelchecklist.html
@@ -36,6 +36,8 @@ Clothes.
 <li>Underwear</li>
 <li>Socks</li>
 <li>Spare shoes, or sandals</li>
+<li>Shorts</li>
+<li>T-shirt</li>
 </ul>
 
 Toiletries.
@@ -83,6 +85,7 @@ Paperwork.
 <li>Hotel reservation. Check the address</li>
 <li>Time table, agenda, and such</li>
 <li>Insurance papers</li>
+<li>Country specific visa print out(s), such as ESTA</li>
 </ul>
 
 Other things in bag.
