web: add index page description
Signed-off-by: Sami Kerola <kerolasa@iki.fi>

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link href=kerolasa.png rel=icon type=image/png>
 <link rel=canonical href=https://kerolasa.iki.fi>
 <meta content="width=device-width,minimum-scale=1,initial-scale=1" name=viewport>
+<meta name="description" content="Personal homepage of Sami Kerola including contact info.">
 <meta content=en name=language>
 <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
 <meta content="index, follow" name=robots>
